--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@imagekit/react": "^5.0.1",
     "axios": "^1.12.1",
     "react": "^19.1.1",
+    "react-checkbox-tree": "^1.8.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.9.0",
     "uuid": "^13.0.0"
