fixed tests according to revised backend responses (two in CreatePostOverlay still fail...)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fibre_fantasies",
+  "name": "fibre-fantasies-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
